<?xml version="1.0"?>
<package format="2">
  <name>sync_tool</name>
  <version>0.0.0</version>
  <description>The topic_sync_helper package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="rcy@todo.com">rcy</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dvs_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nodelet</depend>
  <depend>rosbag</depend>
  <depend>message_filters</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
